--- a/sass/components/_lists.scss
+++ b/sass/components/_lists.scss
@@ -3,3 +3,5 @@
 	vertical-align: baseline;
 	zoom: 1; }
 
+.no-list-style { list-style-type: none; }
+
