--- a/sass/components/_modules.scss
+++ b/sass/components/_modules.scss
@@ -6,18 +6,35 @@
 
 // Highlight Module 
 .highlight {
-	text-align: center;	
-	@include breakpoint(bp2) {
-	  width: 50%; 
-		text-align: left;	} }
+	text-align: center; }
 
-.highlight img {
-	@include breakpoint(bp2) {
-		float: left;
-		width: 30%;
-		overflow: hidden; } }
+.highlight-wrap { 		
+		overflow: hidden;
+		clear: both;		
+		margin-left: -2em;
+		padding: 0;	}
 
-.highlight .header {}
+.highlight-unit {
+  	position: relative;
+  	overflow: visible;
+  	float: left;
+  	width: 33%;
+  	height: 10em;
+  	padding-left: 2em;
+  	margin: 0 0 $base-spacing-unit*3;
+  	@include breakpoint(bp6) { height: 9.5em; }
+  	@include breakpoint(bp5) { height: 9em; }
+  	@include breakpoint(bp4) { height: 10em; width: 50%; }
+  	@include breakpoint(bp3) { height: 11em; }
+  	@include breakpoint(bp2) { height: 11em; }
+  	@include breakpoint(bp1) { height: 9.5em; } }
+  	
+
+.highlight-header {
+	padding-top: $base-spacing-unit/2;
+	font-size: $font-size-delta;	
+	font-weight: 700;
+	line-height: $line-height-lowest; }
 
 // Header Bars
 .header-bar {
