--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -51,10 +51,10 @@ h4 {
 	font-size: $font-size-main;  
 	line-height: $line-height-lowest;  
 	margin: 0 0 .625em; }
-	
+
 .delta { 
 	font-size: $font-size-delta; 
-	line-height: $line-height-lower;  
+	line-height: $line-height-lowest;  
 	margin: 0 0 .625em; }
 
 .text-center { text-align: center; }
